# football_analytics

./: .gitattributes  .gitignore  Dockerfile  README.md  agents.md  main.ipynb  pyproject.toml  requirements.txt
.github/workflows/: deploy-api.yml  deploy-frontend-pages.yml  ruff  ruff.yml  tests.yml
01-analysis/: 01-analysis.ipynb  02-analysis.ipynb
02-analysis/: 02-analysis.ipynb  FeatureEngineering.md  feature_engineering.ipynb  openfe_tmp_data.feather  optuna_study.pkl  temp.py
02-analysis/mlruns/0/: meta.yaml
02-analysis/mlruns/848270811606015352/: meta.yaml
02-analysis/pickles/: openfe_artifact.pkl
api/: main.py
api/v1/routes/: inference.py
data/02-analysis/: passes.csv  passes.parquet
feature_engineering/: ColumnTransformer.py  FeatureEngineeringTransformer.py  FeatureSelector.py  OpenFETransformations.py  RowWiseTransformations.py  feature_engineering_transformer.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  script.js  style.css  tsconfig.json  vite.config.ts
frontend/assets/css/: style.css
frontend/src/: main.ts  types.ts  vite-env.d.ts
frontend/src/config/: constants.ts
frontend/src/models/: PassArrow.ts
frontend/src/renderers/: PitchRenderer.ts
frontend/src/services/: passPredictionService.ts
frontend/src/state/: PlayStore.ts
frontend/src/ui/: UIController.ts
frontend/src/utils/: dist.ts  id.ts  passPredictionPayload.ts  probabilityColor.ts
model/: README.md  data_classes.py  dataclasses.py  eval.py  nested_cv_eval.py  train.py  tuning.py
notebooks/: main.ipynb  move_probabilities.ipynb  outdated.ipynb
pipeline/: feature_engineering_transformer.py
src/: utils.py
src/02-analysis/: 02-analysis.ipynb  FeatureEngineering.md  README.md  feature_engineering.ipynb
src/03-analysis/: 03-analysis.ipynb
src/api/: RAEDME.md  README-2.md  README.md  main.py
src/api/artifacts/: best_params.json  column_wise_features.pkl  manifest.json
src/api/artifacts/catboost/: best_params.json  manifest.json
src/api/artifacts/lightgbm/: best_features.json  best_params.json  manifest.json
src/api/core/: auth.py  dependencies.py
src/api/schemas/: enums.py  request.py  response.py
src/api/scripts/: download_inference_artifacts.py
src/api/services/: inference_frame_service.py  model_service.py
src/api/v1/: router.py
src/data/02-analysis/: oof_gt.npy  passes.parquet
src/evaluation/: eval.py
src/feature_engineering/: ColumnTransformer.py  OpenFETransformations.py  RowWiseTransformations.py
src/feature_engineering/OpenFE/: FeatureGenerator.py  openfe.py
src/football_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/frontend/: script.js  style.css
src/model/: BaseModelWrapper.py  CatBoostWrapper.py  LGBMWrapper.py  XGBoostWrapper.py  data_classes.py  eval.py  fetch_model.py  nested_cv_eval.py  train.py  tuning.py
src/training/: nested_cv_eval.py  nested_cv_evaluator.py  param_tuner.py  train.py  tuning.py
src/utils/: gmm_handler.py  inference_utils.py  mlflow_handler.py  passes_handler.py  pitch_utils.py  preprocessing_handler.py  statics.py  utils.py
streamlit/: outdated.py
tests/: test_column_transformer.py  test_nested_cv_eval.py  test_train.py  test_tuning.py
utils/: GMMHandler.py  ShotsHandler.py  events_handler.py  feature_engineering_handler.py  gmm_handler.py  passes_handler.py  preprocessing_handler.py  shots_handler.py  statics.py  utils.py
(+154 files in other folders)
