[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analytics"
version = "0.1.0"
description = "Code related to football analytics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Yucheng Fu" }
]
dependencies = [
    "mlflow==3.2.0",
    "cffi>=1.17,<3.0",
    "cloudpickle==3.1.1",
    "lightgbm==4.6.0",
    "matplotlib>=3.9,<4.0",
    "numpy==1.26.4",
    "packaging>=23,<25",
    "pandas>=2.2,<3.0",
    "psutil>=5.9,<7.0",
    "pyarrow>=19,<20",
    "scikit-learn>=1.5,<2.0",
    "scipy>=1.14,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# -----------------------
# RUFF
# -----------------------

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "feature_engineering/OpenFE"
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"