[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analytics"
version = "0.1.0"
description = "Code related to football analytics"
readme = "README.md"
requires-python = ">=3.11.10"
authors = [
    { name = "Yucheng Fu" }
]
dependencies = [
    "mlflow==3.2.0",
    "cffi==2.0.0",
    "cloudpickle==3.1.1",
    "lightgbm==4.6.0",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "packaging==23.2",
    "pandas==2.2.3",
    "psutil==6.1.0",
    "pyarrow==19.0.0",
    "scikit-learn==1.5.0",
    "scipy==1.14.1",
    "mplsoccer==1.2.4",
    "statsbombpy==1.12.0",
    "polars==1.32.3",
    "optuna==4.5.0",
    "optuna-integration[lightgbm]==4.5.0",
    "plotly==6.7.0",
    "shap==0.48.0",
    "kaleido==1.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# -----------------------
# RUFF
# -----------------------

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "feature_engineering/OpenFE"
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"